# zcore

./: CMakeLists.txt  README.md  ReadMe.md  config.json
head/: CLISingleton.hpp  CmdExecution.hpp  ExecSingleton.hpp  JsonSingleton.hpp  Zcore.hpp
src/: CLISingleton.cpp  CmdExecution.cpp  ExecSingleton.cpp  JsonSingleton.cpp  Zcore.cpp  main.cpp
